--- a/src/pages/authentication/style.scss
+++ b/src/pages/authentication/style.scss
@@ -1,20 +1,30 @@
 .sign-in-card {
-  padding: 200px;
+  padding: 150px 40px;
+  background-color: #ffffff;
+  border-radius: 16px;
+  box-shadow: 0px 4px 20px rgba(0,0,0,0.05);
 }
 
 .sign-up-card {
-  margin-top: 10vh;
-  margin-bottom: 10vh;
-  justify-content: center;
-  alignItems: center;
+  margin: 8vh auto;
+  padding: 60px 40px;
+  max-width: 500px;
+  background-color: #ffffff;
+  border-radius: 16px;
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.05);
 }
 
 .sign-in-left-container {
   display: flex;
-  alignItems: center
+  align-items: center;
+  justify-content: center;
+  background-color: #F0F5F3;
+  padding: 40px;
+  border-radius: 16px 0 0 16px;
 }
 
 .sign-in-left-img {
-  width: 60px;
-  heigh: 50px
+  width: 100px;
+  height: auto;
+  object-fit: contain;
 }
